# pewter

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
benches/: bench.rs  movegen_bench.rs
crates/pewter-core/: Cargo.toml  build.rs
crates/pewter-core/benches/: bench.rs
crates/pewter-core/src/: board.rs  chessmove.rs  color.rs  coordinates.rs  lib.rs  state.rs  zobrist.rs
crates/pewter-core/src/bitboard/: masks.rs
crates/pewter-core/src/io/: ascii.rs  mod.rs  uci.rs
crates/pewter-core/src/movegen/: legal.rs  mod.rs  pseudo_legal.rs
crates/pewter-engine/: Cargo.toml
crates/pewter-engine/src/: lib.rs  main.rs
crates/pewter-engine/src/engine/: engine_server.rs  eval.rs  mod.rs  opening_db.rs  ordering.rs  search.rs  transposition.rs
crates/pewter-opening-db-builder/: Cargo.toml
crates/pewter-search-debugger/: Cargo.toml
crates/pewter-search-debugger/src/: main.rs
crates/pewter-stockfish-comparer/: Cargo.toml
crates/pewter-stockfish-comparer/src/: main.rs
src/: bitboard.rs  board.rs  chessmove.rs  color.rs  coordinates.rs  engine.rs  fen.rs  lib.rs  main.rs  movegen.rs  piece.rs  state.rs  zobrist.rs
src/bitboard/: masks.rs  mod.rs
src/engine/: engine_server.rs  eval.rs  mod.rs  opening_db.rs  ordering.rs  search.rs  transposition.rs
src/io/: ascii.rs  fen.rs  mod.rs  pgn.rs  uci.rs
src/movegen/: bmi.rs  bmi_tables.rs  legal.rs  mod.rs  pseudo_legal.rs
tourney/: .gitignore  .python-version  __main__.py  pyproject.toml  tourney.py
