[package]
name = "pewter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
arrayvec = "0.7.2"
bitflags = "1.3.2"
chrono = "0.4.19"
crossbeam-channel = "0.5.1"
fern = "0.6.0"
log = "0.4.14"
rand = "0.8.4"
thiserror = "1.0.30"
variant_count = "1.1.0"

[dev-dependencies]
proptest = "1.0.0"
criterion = "0.3" 

[[bench]]
name = "bench"
harness = false
