[package]
name = "pewter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
arrayvec = "0.7.2"
bitflags = "1.3.2"
chrono = "0.4.19"
clap = { version = "3.0.0-rc.7", features = ["derive"] }
crossbeam-channel = "0.5.1"
fern = "0.6.0"
futures = "0.3.19"
governor = "0.3.2"
log = "0.4.14"
rand = { version = "0.8.4", features = ["small_rng"] }
rayon = "1.5.1"
reqwest = "0.11.8"
scraper = "0.12.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_cbor = "0.11.2"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["full"] }
variant_count = "1.1.0"
zstd = "0.9.1"

[dev-dependencies]
proptest = "1.0.0"
criterion = "0.3" 

[build-dependencies]
rand = { version = "0.8.4", features = ["small_rng"] }
anyhow = "1.0.51"

[[bench]]
name = "bench"
harness = false
