[package]
name = "pewter-core"
version = "0.1.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.51"
arrayvec = "0.7.2"
bitflags = "1.3.2"
crossbeam-channel = "0.5.1"
log = "0.4.14"
rand = { version = "0.8.4", features = ["small_rng"] }
serde = { version = "1.0.132", features = ["derive"] }
thiserror = "1.0.30"
variant_count = "1.1.0"

[dev-dependencies]
proptest = "1.0.0"
criterion = "0.3" 

[build-dependencies]
rand = { version = "0.8.4", features = ["small_rng"] }
anyhow = "1.0.51"

[[bench]]
name = "bench"
harness = false
