[package]
name = "pewter-engine"
version = "0.1.0"
edition = "2018"

[dependencies]
pewter-core = { path = "../pewter-core" }
anyhow = "1.0.51"
arrayvec = "0.7.2"
chrono = "0.4.19"
crossbeam-channel = "0.5.1"
fern = "0.6.0"
log = "0.4.14"
rand = { version = "0.8.4", features = ["small_rng"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_cbor = "0.11.2"
thiserror = "1.0.30"
variant_count = "1.1.0"
zstd = "0.9.1"