[package]
name = "pewter-opening-db-builder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pewter-core = { path = "../pewter-core" }
pewter-engine = { path = "../pewter-engine" }
anyhow = "1.0.51"
chrono = "0.4.19"
clap = { version = "3.0.0-rc.7", features = ["derive"] }
futures = "0.3.19"
governor = "0.3.2"
rayon = "1.5.1"
reqwest = "0.11.8"
scraper = "0.12.0"
tokio = { version = "1.15.0", features = ["full"] }