[package]
name = "pewter-stockfish-comparer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pewter-core = { path = "../pewter-core" }
anyhow = "1.0.51"
clap = { version = "3.0.0-rc.7", features = ["derive"] }